<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/riwayat"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#D1D3DC"
        android:hint="@string/welcome"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="95dp"/>

    <TextView
        android:id="@+id/tvMembership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E4E5EC"
        android:layout_gravity="center"
        android:hint="@string/Membership"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="0dp"/>


    <TextView
        android:id="@+id/tvNamaPembeli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/customer"
        android:layout_marginTop="30dp"
        android:textColor="#D0D1D8"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvKodeBarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/kode"
        android:textColor="#E9E9ED"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNamaBarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_item"
        android:textColor="#D7D9E6"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvJumlahBarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E4E6F3"
        android:hint="@string/total_item"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTotalHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E1E3EC"
        android:hint="@string/total_harga"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDiskon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#DDDEE6"
        android:hint="@string/disc"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTotalBayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/total_bayar"
        android:textSize="15sp"
        android:textColor="#DFE1E8"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:textColor="#DADDEF"
        android:layout_gravity="center"
        android:hint="@string/thanks"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#DEE1F3"
        android:layout_gravity="center"
        android:hint="@string/store"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvhope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#E9E9ED"
        android:layout_gravity="center"
        android:hint="@string/hope"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/share"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>